@@ -5,7 +5,18 @@ Changes - Apache::Test change logfile
 =head1 CHANGES
 
 =over 3
-  
+
+=item 1.19 - January 5, 2005
+
+Test for module.c instead of module.so for IfModule in
+find_and_load_module [Chia-Liang Kao <chialiang gmail.com>]
+
+Apache-Test/META.yml is excluded from mp2 distro to make PAUSE indexer
+happy, but then perl Makefile.PL complains about a missing META.yml,
+so autogenerate it if it wasn't in the distro [Stas]
+
+
+
 =item 1.18 - December 23, 2004
 
 fix a bug in A-T config generation, when a vhost entry was in
